--- a/shell/android/res/values-pl/strings.xml
+++ b/shell/android/res/values-pl/strings.xml
@@ -1,75 +1,74 @@
 <resources>
 
-    <string name="menu_settings">Settings</string>
-    <string name="system_path">System Path (location of the data folder with dc_boot.bin/dc_flash.bin inside)</string>
-    <string name="browser_path">Default System Path</string>
-    <string name="games_path">Storage Path (location of .gdi, .chd or .cdi images)</string>
-    <string name="game_path">Default Game Storage</string>
+    <string name="menu_settings">Ustawienia</string>
+    <string name="system_path">Ścieżka systemowa (lokalizacja folderu zawierającego dc_boot.bin/dc_flash.bin)</string>
+    <string name="browser_path">Domyślna ścieżka systemowa</string>
+    <string name="games_path">Ścieżka obrazów (lokalizacja obrazów dysków .gdi, .chd or .cdi)</string>
+    <string name="game_path">Domyślna ścieżka obrazów</string>
     
-    <string name="boot_bios">Boot Dreamcast Bios</string>
-    <string name="missing_bios">BIOS Missing. The Dreamcast BIOS is required for this emulator to work. Place the BIOS file in %1$s/data/dc_boot.bin</string>
-    <string name="missing_flash">Flash Missing. The Dreamcast Flash is required for this emulator to work. Place the Flash file in %1$s/data/dc_flash.bin</string>
-    <string name="require_bios">You have to provide the BIOS</string>
+    <string name="boot_bios">Uruchom BIOS'a Dreamcast'a</string>
+    <string name="missing_bios">Brak BIOS'u. BIOS Dreamcast'a jest potrzebny, aby ten emulator działał. Skopiuj BIOS do %1$s/data/dc_boot.bin</string>
+    <string name="missing_flash">Brak Flash'a. Plik Flash Dreamcast'a jest potrzebny, aby ten emulator działał. Skopiuj plik Flash do %1$s/data/dc_flash.bin</string>    <string name="require_bios">You have to provide the BIOS</string>
     
-    <string name="folder_bios">BOOT BIOS</string>
-    <string name="folder_select">SELECT CURRENT FOLDER</string>
+    <string name="folder_bios">URUCHOM BIOS</string>
+    <string name="folder_select">WYBIERZ BIEŻĄCY FOLDER</string>
 
-    <string name="select_dynarec">Dynarec Options</string>
-    <string name="select_unstable">Unstable Optimisations</string>
-    <string name="select_region">DC Region</string>
+    <string name="select_dynarec">Opcje Dynarec</string>
+    <string name="select_unstable">Niestabilne optymalizacje</string>
+    <string name="select_region">Region DC</string>
     <string name="select_limitfps">Limit FPS</string>
-    <string name="select_mipmaps">Use Mipmaps (fix for old SGX540)</string>
-    <string name="select_stretch">Widescreen Mode</string>
-    <string name="set_frameskip">Frameskip Value</string>
-    <string name="select_render">PVR Rendering (does nothing for now)</string>
-    <string name="default_disk">Set Default Disk</string>
+    <string name="select_mipmaps">Użyj Mipmap (fix dla starego SGX540)</string>
+    <string name="select_stretch">Tryb Szerokoekranowy</string>
+    <string name="set_frameskip">Wartość Frameskip</string>
+    <string name="select_render">PVR Rendering (na razie nie działa)</string>
+    <string name="default_disk">Ustaw domyślny dysk</string>
 
-    <string name="games_listing">Available Dreamcast Games</string>
+    <string name="games_listing">Dostępne gry Dreamcast'a</string>
 
-    <string name="customize_touch_controls">Customize Touch Controls</string>
-    <string name="launch_editor">Launch Editor</string>
-    <string name="touch_vibration">Touch Vibration</string>
-    <string name="controller_a">Controller A</string>
-    <string name="controller_b">Controller B</string>
-    <string name="controller_c">Controller C</string>
-    <string name="controller_d">Controller D</string>
-    <string name="controller_not_connected">Controller Not Connected</string>
-    <string name="controller_none_selected">No Controller Selected</string>
-    <string name="select">Select</string>
-    <string name="remove">Remove</string>
-    <string name="select_controller_title">Select Controller</string>
-    <string name="select_controller_message">Press any button on the controller %1$s to assign to port</string>
-    <string name="controller_already_in_use">This controller is already in use!</string>
-    <string name="modified_layout">Enable Custom Key Layout</string>
-    <string name="controller_compat">Enable Compatibility Mode</string>
+    <string name="customize_touch_controls">Dostosuj układ przycisków dotykowych</string>
+    <string name="launch_editor">Uruchom Edytor</string>
+    <string name="touch_vibration">Wibracja przy dotyku</string>
+    <string name="controller_a">Kontroler A</string>
+    <string name="controller_b">Kontroler B</string>
+    <string name="controller_c">Kontroler C</string>
+    <string name="controller_d">Kontroler D</string>
+    <string name="controller_not_connected">Brak podłączonego kontrolera</string>
+    <string name="controller_none_selected">Nie wybrano kontrolera</string>
+    <string name="select">Wybierz</string>
+    <string name="remove">Usuń</string>
+    <string name="select_controller_title">Wybierz kontroler</string>
+    <string name="select_controller_message">Naciśnij dowolny przycisk na kontrolerze %1$s aby poodłączyć do portu</string>
+    <string name="controller_already_in_use">Ten kontroler jest już używany!</string>
+    <string name="modified_layout">Włącz własny układ kontrolera</string>
+    <string name="controller_compat">Włącz tryb kompatybilności</string>
     
-    <string name="customize_physical_controls">Customize Physical Controls</string>
-    <string name="map_keycode_title">Modify Controller</string>
-    <string name="map_keycode_message">Press the new controller button for %1$s</string>
+    <string name="customize_physical_controls">Dostosuj prawdziwy kontroler</string>
+    <string name="map_keycode_title">Modyfikuj kontroler</string>
+    <string name="map_keycode_message">Przyciśni przycisk dla %1$s</string>
     
-    <string name="moga_pro_connect">MOGA Pro Connected!</string>
-    <string name="moga_connect">MOGA Connected!</string>
+    <string name="moga_pro_connect">MOGA Pro przyłączona!</string>
+    <string name="moga_connect">MOGA przyłączona!</string>
 
-    <string name="about_text">reicast is a dreamcast emulator</string>
-    <string name="revision_text">Version: %1$s [%2$s]</string>
+    <string name="about_text">reicast jest emulatorem dreamcast'a</string>
+    <string name="revision_text">Wersja: %1$s [%2$s]</string>
     
-    <string-array name="controllers">
+    <string-array name="kontrolery">
     <item>Controller A</item>
     <item>Controller B</item>
     <item>Controller C</item>
     <item>Controller D</item>
     </string-array>
 
-	<string name="browser">Explorar</string>
-    <string name="settings">Configurações</string>
-    <string name="paths">Pastas</string>
-    <string name="input">Entrada</string>
-    <string name="about">Sobre</string>
-    <string name="rateme">Avaliar</string>
+	<string name="browser">Eksplorator</string>
+    <string name="settings">Konfiguracja</string>
+    <string name="paths">Ścieżki</string>
+    <string name="input">Kontrolery</string>
+    <string name="about">O nas</string>
+    <string name="rateme">Oceń nas</string>
     
-    <string name="textOn">ON</string>
-    <string name="textOff">OFF</string>
+    <string name="textOn">WŁ</string>
+    <string name="textOff">WYŁ</string>
 
-    <string name="menu_debug">Save Error Logs</string>
+    <string name="menu_debug">Zapisz logi błędów</string>
 
 </resources>
